--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@types/jwt-decode": "^3.1.0",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
